# Nebula

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN_v1.0.md  LICENSE  README.md  SECURITY.md  analyze_errors.ps1  docker-compose.yml  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  run_cargo.ps1  rust-toolchain.toml  tsconfig.json  vite.config.mjs  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  entrypoint.sh  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.config/: nextest.toml
src-tauri/benches/: dispatcher.rs  memory.rs  startup.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_reflections.sql  003_skills.sql  004_v05.sql  005_v10.sql  006_documents_fk.sql  007_sensitive_mask.sql  008_evolution.sql  009_skill_archive.sql  010_fts5.sql  011_relation_evidence.sql  012_skill_audit_log.sql  013_memory_acl.sql  014_memories_archived.sql  015_skill_meta_extensions.sql  016_memory_versions.sql  017_document_exports.sql  018_fix_skill_ratings_pk.sql  019_memory_branches.sql  020_self_reflections.sql  021_skill_trust_meta.sql  022_crdt_op_log.sql  023_inbox.sql  024_chat_annotations.sql  025_triggers.sql  026_watch.sql  027_cost_source.sql  028_im_bindings.sql  029_wiki_notes.sql  030_ingest_cost.sql  031_semantic_cache_entries.sql  032_wiki_notes_importance.sql  033_wiki_note_links.sql  034_arena.sql  035_domain_column.sql  036_cost_work_type.sql  037_long_tasks.sql  038_loop_audit_log.sql  039_eval_traces.sql
src-tauri/proto/: nine_snake.proto
src-tauri/src/: app_config.rs  app_state.rs  bootstrap.rs  bootstrap_headless.rs  error_ui.rs  lib.rs  main.rs  metrics.rs  tauri_setup.rs  tracing_setup.rs
src-tauri/src/api/: auth.rs  daemon.rs  gateway_daemon.rs  mod.rs  rest.rs  server.rs  static_server.rs
src-tauri/src/autonomy/: approval.rs  mod.rs  risk_map.rs
src-tauri/src/backup/: commands.rs  mod.rs  scheduler.rs
src-tauri/src/bootstrap/: ai_core.rs  core.rs  platform.rs  storage.rs  swarm.rs
src-tauri/src/browser/: agent.rs  api_mode.rs  mod.rs  vlm_mode.rs
src-tauri/src/channel/: bridge.rs  discord.rs  inbox.rs  mod.rs  router.rs  telegram.rs  types.rs  webchat.rs
src-tauri/src/commands/: acl.rs  annotations.rs  arena.rs  autonomy.rs  channel.rs  chat.rs  clipboard.rs  core.rs  cost.rs  credits.rs  daemon.rs  device.rs  diagnostics.rs  directed_edit.rs  editor.rs  error.rs  eval.rs  evolution.rs  export.rs  identity.rs  im.rs  inbox.rs  inline_completion.rs  llm.rs  llm_config.rs  master.rs  mcp.rs  mdrm.rs  memory.rs  mod.rs  models_config.rs  observability.rs  openapi.rs  os.rs  persona.rs  plan.rs  prefetch.rs  reflect.rs  scenarios.rs  security.rs  (+20 more)
src-tauri/src/connectors/: github_mcp.rs  mod.rs
src-tauri/src/diagnostics/: bus.rs  doctor.rs  events.rs  layer.rs  mod.rs
src-tauri/src/editor/: debounce.rs  file_ops.rs  git.rs  inline_completion.rs  mod.rs
src-tauri/src/eval/: mod.rs  trace.rs  trace_store.rs
src-tauri/src/evolution/: automation_templates.rs  cron_engine.rs  cron_expr.rs  cron_scheduler.rs  gene_mutator.rs  goal_signal.rs  honcho.rs  mod.rs  outcome.rs  outcome_collectors.rs  prompt_mutator.rs  skill_evolver.rs  timer_engine.rs
src-tauri/src/grpc/: mod.rs  proto.rs  server.rs  tonic_server.rs
src-tauri/src/identity/: did_key.rs  document.rs  mod.rs  oauth.rs  oauth_github.rs  oauth_gmail.rs  oauth_manager.rs  oauth_notion.rs  oauth_obsidian.rs
src-tauri/src/im/: mod.rs  store.rs  webhook.rs
src-tauri/src/llm/: anthropic.rs  arena.rs  cost_policy.rs  cost_tracker.rs  dispatcher.rs  gateway.rs  mod.rs  model_health.rs  model_router.rs  models_config.rs  ollama.rs  openai_compat.rs  persona.rs  prefetch.rs  reasoning.rs  semantic_cache.rs  token_juice.rs
src-tauri/src/long_task/: commands.rs  engine.rs  mod.rs
src-tauri/src/mcp/: client.rs  config.rs  mod.rs  protocol.rs  registry.rs  security.rs  sse_transport.rs  streamable_http.rs  transport.rs
src-tauri/src/memory/: acl.rs  annotations.rs  blackhole.rs  bm25.rs  causal_graph.rs  clip_embedder.rs  consistency.rs  document_extractor.rs  embedder.rs  entity_extractor.rs  export.rs  file_watcher.rs  forgetting.rs  graph_search.rs  hybrid_search.rs  importance.rs  l0_cache.rs  lance_store.rs  layers.rs  mdrm_graph.rs  migration.rs  mod.rs  orchestrator.rs  query_dsl.rs  reflect.rs  self_reflection.rs  sponge.rs  sqlite_cipher.rs  sqlite_store.rs  summarizer.rs  types.rs  version_control.rs
src-tauri/src/metrics/: exporter.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/oauth/: callback_server.rs  manager.rs  mod.rs  pkce.rs  token_store.rs
src-tauri/src/observability/: mod.rs  otel.rs  span_type.rs
src-tauri/src/os/: action_executor.rs  action_recorder.rs  clipboard.rs  clipboard_watcher.rs  context_menu.rs  controller.rs  controller_vlm.rs  design_mode.rs  file_handler.rs  mod.rs  notifications.rs  power.rs  remote_operator.rs  shell.rs  shortcut.rs  tray.rs  uiautomator.rs
src-tauri/src/perf/: mod.rs  monitor.rs  report.rs
src-tauri/src/plan/: confirmation.rs  mod.rs  plan_mode.rs
src-tauri/src/plugins/: actions.rs  filters.rs  mod.rs  pipes.rs  registry.rs  skill_bridge.rs  traits.rs
src-tauri/src/proactive/: mod.rs
src-tauri/src/scenarios/: mod.rs
src-tauri/src/security/: aio_sandbox.rs  detectors.rs  injection_guard.rs  keychain.rs  mod.rs  ssrf_guard.rs
src-tauri/src/shadow_workspace/: commands.rs  engine.rs  mod.rs  recording.rs
src-tauri/src/sidecar/: ipc.rs  llm_service.rs  manager.rs  memory_service.rs  mod.rs  os_controller_daemon.rs  os_controller_service.rs  protocol.rs  reflection_service.rs  skill_service.rs  swarm_service.rs
src-tauri/src/skills/: audit.rs  auto_inventor.rs  capability.rs  discover.rs  engine.rs  exec_approval.rs  executor.rs  exporter.rs  extractor.rs  hub_client.rs  importer.rs  marketplace.rs  mod.rs  protocol.rs  publisher.rs  sandbox.rs  (+3 more)
src-tauri/templates/: scenarios.json
src-tauri/tests/: integration.rs  m5_test.rs
(+444 files in other folders)
